--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,3 +7,4 @@
 
   Enhanced features will include teacher functionality to compare answers among students in a classroom, Twitter integration to share your estimate with your tweeps, and a blog to keep up with late-breaking news in the field.
 
+= partial 'shared/survey_prompt'
