--- a/app/views/survey_groups/edit.html.haml
+++ b/app/views/survey_groups/edit.html.haml
@@ -1,3 +1,7 @@
 - semantic_form_for current_object do |form|
-  = form.inputs
-  = form.buttons
+  - form.inputs do
+    = form.input :age_group, :label_method => :description, :as => :radio
+    = form.input :group_name
+
+  - form.buttons do
+    = form.commit_button 'save'
