Added fancy green button

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -252,7 +252,15 @@ blockquote.signage
           strong
             color: #000
 
+    #form
+      +border_radius(.5em)
+      padding: 1em
+      background: #a2cb52 url(/images/gradient-green2.png) repeat-x
+      width: 650px
+      border: 1px solid #5c992e
+
     input[type=submit]
+      margin-top: 1em
       font-size: 90%
       font-family: Helvetica, 'Mank Sans', sans-serif
       font-weight: bold
