--- a/app/views/surveys/_fp.html.haml
+++ b/app/views/surveys/_fp.html.haml
@@ -1,10 +1,10 @@
 - title 'Fraction of Stars Which Develop Planets'
 
-%h3 How many suitable stars actually form a solar system with planets in it.
+%h3 How many suitable stars actually form a solar system with planets in it?
 
 %dl
   %dt.bullet 
-    = main_point "As of August, 2009 we have found 357 planets around 300 different stars"
+    = main_point "As of August 2009, we have found 357 planets around 300 different stars"
   %dd.detail
     %p We found the first planet orbiting another star in 1995. Since that time, we have found many more planets orbiting many more stars. We can find these planets by watching for the stars light output to drop slightly when the planet passes in front of it, this is called the <i>Transit Method</i>. We can also watch for the star to wobble in response to the planets movement. If we detect actual motion of the star is it call <i>Astrometric Measurement</i>, and if we detect a doppler shift in the star's light it is called the <i>Radial Velocity Method</i>.
   %dt.bullet
