--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -7,11 +7,11 @@
   max-width: 960px
 =outline(!color=red)
   * html &
-    border = 1px dotted !color
+    border = 1px "dotted" !color
   html[lang~=en] &
-    border = 1px dotted !color
+    border = 1px "dotted" !color
   html[lang~=EN] &
-    outline = 1px dotted !color
+    outline = 1px "dotted" !color
 
 =border_radius(!radius)
   border-radius = !radius
