--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -51,4 +51,5 @@
     
       #footer
         %p
-          == Copyright &copy; #{Date.today.year}.
+          == Copyright &copy; #{Date.today.year}, 
+          == #{link_to 'The Alienators', 'http://r09.railsrumble.com/teams/the-alienators'}.
