--- a/app/views/surveys/edit.html.haml
+++ b/app/views/surveys/edit.html.haml
@@ -6,6 +6,9 @@
     });
   })
 
+#parameter-symbol
+  = parameter_to_drake_component(@parameter)
+
 = partial @parameter
 
 - if current_object.present?
