Start of footer menu

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -150,6 +150,8 @@ body
   font-size: 11px
   font-family: arial, sans-serif
   color: #171a35
+  .menu
+    font-size: 120%
   a
     color: #141830
     font-weight: bold
