Redirect users to their profile page automatically after logging in

--- a/app/views/users/_user_account_header.html.haml
+++ b/app/views/users/_user_account_header.html.haml
@@ -1,4 +1,4 @@
 #this-is-you
   %strong This is your profile.
-  Members of groups you lead or classes you teach can visit #{link_to 'this page', current_object}
+  You can refer your students to #{link_to 'this page', current_object}
   to record their answers and to view results.
