Adding image to r_start

--- a/app/views/surveys/_r_star.html.haml
+++ b/app/views/surveys/_r_star.html.haml
@@ -1,6 +1,8 @@
+
 - title "Rate of Stellar Formation"
 
 %h3 How many stars form in our galaxy each year?
+= image_tag 'orion_nebula.jpg', :class => 'right'
 
 %dl
   %dt.bullet
