Added some stuff to the teacher profile

--- a/app/views/users/_user_account_header.html.haml
+++ b/app/views/users/_user_account_header.html.haml
@@ -2,3 +2,10 @@
   %strong This is your profile.
   You can refer your students to #{link_to 'this page', current_object}
   to record their answers and to view results.
+
+%p
+  You can also #{link_to 'add a new class or group', new_survey_group_path} to begin
+  collecting responses from your students.
+%p
+  After you create the group, it will appear on your profile and people will be able
+  to submit responses as part of that group.
