--- a/app/views/surveys/_r_star.html.haml
+++ b/app/views/surveys/_r_star.html.haml
@@ -2,36 +2,42 @@
 - title "Rate of Stellar Formation"
 
 %h3 How many stars form in our galaxy each year?
-= image_tag 'orion_nebula.jpg', :class => 'right'
 
-%dl
-  %dt.bullet
-    = main_point "Only parameter that is well understood"
-  %dd.detail 
-    %p We have a lot of observational evidence of star formation in action. We also have good evidence for the number of stars in the galaxy (400 billion) and its age (up to 13 billion years), this gives us several ways to calculate an average rate.
+%div.bullets
+  .illustration
+    = image_tag 'orion_nebula.jpg', :class => 'illustration', :title => 'Star forming regions of the Orion Nebula.'
+    Star forming region of the Orion Nebula.
+    %br
+    HST Photo courtesy of NASA
 
-  %dt.bullet 
-    = main_point "Simple calculation: 400 billion stars/13 billion years"
-  %dd.detail
-    %p Estimates of the number of stars in our galaxy are between 200 and 600 billion stars, it is hard to count them, so we estimate based on the observed weight of the galaxy. You can comfortably pick any number in this range, but 400 billion seems to be a commonly used value.
-    %p
-      The age of the galaxy is also difficult to pin down. The oldest known star in the galaxy is about 13.2 billion years old. The galactic disk is probably younger than that, 6-10 billion years. For our purposes a median value of 9 or 10 billion is probably OK. Divide the number of stars by this and you have a simple estimate of
-      #{drake_stars}.
+  %dl
+    %dt.bullet
+      = main_point "Only parameter that is well understood"
+    %dd.detail 
+      %p We have a lot of observational evidence of star formation in action. We also have good evidence for the number of stars in the galaxy (400 billion) and its age (up to 13 billion years), this gives us several ways to calculate an average rate.
 
-  %dt.bullet 
-    = main_point "Rate of star formation is not constant"
-  %dd.detail 
-    %p The rate of star formation is not constant. In the galaxy's early days, there was a lot more star build material available so the rate of formation was much higher. As a result you might want to reduce the above estimate by 25 or 50 percent.
+    %dt.bullet 
+      = main_point "Simple calculation: 400 billion stars/13 billion years"
+    %dd.detail
+      %p Estimates of the number of stars in our galaxy are between 200 and 600 billion stars, it is hard to count them, so we estimate based on the observed weight of the galaxy. You can comfortably pick any number in this range, but 400 billion seems to be a commonly used value.
+      %p
+        The age of the galaxy is also difficult to pin down. The oldest known star in the galaxy is about 13.2 billion years old. The galactic disk is probably younger than that, 6-10 billion years. For our purposes a median value of 9 or 10 billion is probably OK. Divide the number of stars by this and you have a simple estimate of
+        #{drake_stars}.
 
-  %dt.bullet 
-    = main_point "Not all stars are suitable"
-  %dd.detail 
-    %p Some stars are too hot and short lived to be candidates for life. On the other hand, many are too cool to have an appropriate habitable zone. Only about 25% of stars formed will be candidates for our search.
+    %dt.bullet 
+      = main_point "Rate of star formation is not constant"
+    %dd.detail 
+      %p The rate of star formation is not constant. In the galaxy's early days, there was a lot more star build material available so the rate of formation was much higher. As a result you might want to reduce the above estimate by 25 or 50 percent.
 
-  %dt.bullet 
-    = main_point "More information"
-  %dd.detail
-    %ul
-      %li= info_link 'Why use the Rate of formation instead of the number of stars', 'http://www.setileague.org/askdr/rstar.htm'
-      %li= info_link "Wikipedia article about our galaxy's age and composition", 'http://en.wikipedia.org/wiki/Milky_Way'
-      %li= info_link "Stellar classification", 'http://en.wikipedia.org/wiki/Stellar_classification'
+    %dt.bullet 
+      = main_point "Not all stars are suitable"
+    %dd.detail 
+      %p Some stars are too hot and short lived to be candidates for life. On the other hand, many are too cool to have an appropriate habitable zone. Only about 25% of stars formed will be candidates for our search.
+
+    %dt.bullet 
+      = main_point "More information"
+    %dd.detail
+      %ul
+        %li= info_link 'Why use the Rate of formation instead of the number of stars', 'http://www.setileague.org/askdr/rstar.htm'
+        %li= info_link "Wikipedia article about our galaxy's age and composition", 'http://en.wikipedia.org/wiki/Milky_Way'
+        %li= info_link "Stellar classification", 'http://en.wikipedia.org/wiki/Stellar_classification'
