--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -127,11 +127,11 @@ body
                 padding: 0 .5em
                 text-shadow: 0 0 2px #000
                 sub
-                  position: relative
-                  top: -.25em
+                  /position: relative
+                  /top: -.25em
                 sup
-                  position: relative
-                  top: .25em
+                  /position: relative
+                  /top: .25em
             &:hover
               span.function
                 color: #fff
@@ -188,12 +188,12 @@ blockquote.signage
 #content
 
   #sidebar
-    width: 170px
+    width: 108px
     float: right
     margin-left: 20px
     
   color: #fff
-  +pie-clearfix
+  +clearfix
   font-family: 'Mank Sans', Helvetica, 'Arial Narrow', Arial, Verdana, Georgia, 'Times New Roman', Serif
   position: relative
   +width_constraints
