--- a/app/views/surveys/_ne.html.haml
+++ b/app/views/surveys/_ne.html.haml
@@ -1,26 +1,33 @@
 - title 'Number of Earthlike Planets'
 %h3 Average number of bodies in a solar system capable of supporting liquid water.
 
-%dl
-  %dt.bullet
-    = main_point "Earthlike Means Liquid Water"
-  %dd.detail
-    %p Here on Earth, there seems to be one universal requirement for life, liquid water. From black smokers at the bottom of the ocean to water pockets miles underground to glacial melt in Anartica, everywhere we find liquid water we find thriving colonies of bacteria. These colonies often anchor entire ecosystems of high organisms living in improbable places.
-    %p This may seem like a very Earth-centric view. It is certainly possible that life could exist in chemicals other than water. However, there is no evidence for life without water. Furthermore, when it  comes to looking for suitable planets we need to make some assumptions or the search becomes too broad.
-  %dt.bullet
-    = main_point "How Many in Our Solar System, One or Two?"
-  %dd.detail
-    %p There is one obvious planet in our solar system that has liquid water, Earth. However, we know that Mars once had salt water oceans. The rovers Spirit and Opportunity were sent to Mars seeking evidence for ancient water. Their successful missions have changed the way we look at our solar system.
-  %dt.bullet
-    = main_point "Don't Forget About Moons"
-  %dd.detail
-    %p Since the Drake Equation was first proposed it has become clear that we need to look beyond planets. Jupiter's moon Europa and Saturn's moon Encladus are both believed to have liquid oceans under a thick ice crust. The tidal pull of these moons' planets provides the energy to keep the water from freezing. This energy <i>could</i> support life.
-  %dt.bullet
-    = main_point "More Information"
-  %dd.detail
-    %ul
-      %li= info_link 'Mars Rovers', 'http://marsrover.nasa.gov/home/index.html'
-      %li= info_link 'Good Old Girls (video)', 'http://www.youtube.com/watch?v=WDUFX9FuH20'
-      %li= info_link 'Mars Ocean', 'http://www.sciencedaily.com/releases/2007/06/070613131912.htm'
-      %li= info_link 'Europa', 'http://www.solarviews.com/eng/europa.htm'
-      %li= info_link 'Encladus', 'http://science.nasa.gov/headlines/y2006/09mar_enceladus.htm'
+%div.bullets
+  .illustration
+    = image_tag 'wet_mars.jpg', :class => 'illustration', :title => 'A hot Jupiter planet near its parent star.'
+    Mars at it might have looked 3.5 bilion years ago.
+    %br
+    Courtesy NASA/Greg Shirah.
+  %dl
+    %dt.bullet
+      = main_point "Earthlike Means Liquid Water"
+    %dd.detail
+      %p Here on Earth, there seems to be one universal requirement for life, liquid water. From black smokers at the bottom of the ocean to water pockets miles underground to glacial melt in Anartica, everywhere we find liquid water we find thriving colonies of bacteria. These colonies often anchor entire ecosystems of high organisms living in improbable places.
+      %p This may seem like a very Earth-centric view. It is certainly possible that life could exist in chemicals other than water. However, there is no evidence for life without water. Furthermore, when it  comes to looking for suitable planets we need to make some assumptions or the search becomes too broad.
+    %dt.bullet
+      = main_point "How Many in Our Solar System, One or Two?"
+    %dd.detail
+      %p There is one obvious planet in our solar system that has liquid water, Earth. However, we know that Mars once had salt water oceans. The rovers Spirit and Opportunity were sent to Mars seeking evidence for ancient water. Their successful missions have changed the way we look at our solar system.
+    %dt.bullet
+      = main_point "Don't Forget About Moons"
+    %dd.detail
+      %p Since the Drake Equation was first proposed it has become clear that we need to look beyond planets. Jupiter's moon Europa and Saturn's moon Encladus are both believed to have liquid oceans under a thick ice crust. The tidal pull of these moons' planets provides the energy to keep the water from freezing. This energy <i>could</i> support life.
+      = image_tag 'europa.gif', :title => "Cracks in Europa's icy crust. Image courtesy NASA, Voyager 2, 1979", :style => 'width: 350px;'
+    %dt.bullet
+      = main_point "More Information"
+    %dd.detail
+      %ul
+        %li= info_link 'Mars Rovers', 'http://marsrover.nasa.gov/home/index.html'
+        %li= info_link 'Good Old Girls (video)', 'http://www.youtube.com/watch?v=WDUFX9FuH20'
+        %li= info_link 'Mars Ocean', 'http://www.sciencedaily.com/releases/2007/06/070613131912.htm'
+        %li= info_link 'Europa', 'http://www.solarviews.com/eng/europa.htm'
+        %li= info_link 'Encladus', 'http://science.nasa.gov/headlines/y2006/09mar_enceladus.htm'
