--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,4 @@
-- title "#{current_object.login}'s Profile"
+- title "#{current_object.username}'s Profile"
 
 - if current_user == current_object
   = partial 'user_account_header'
