Minor change to user profile page

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,7 +3,10 @@
 - if current_user == current_object
   = partial 'user_account_header'
 
-- if current_object.survey_groups.any?
+- if current_object.survey_groups.empty?
+  %h3 No groups belong to #{current_user == current_object ? 'you' : current_user.username}.
+
+-else
   %h3 Groups
   %table
     %col{:width => 320}
