Remaining content images.

--- a/app/views/surveys/_fi.html.haml
+++ b/app/views/surveys/_fi.html.haml
@@ -1,27 +1,33 @@
 - title "Frequency of Intelligence Evolving"
 %h3 If life starts on a planet, how likely is intelligence to develop?
 
-%dl
-  %dt.bullet
-    = main_point 'What do We Mean by Intelligence?'
-  %dd.detail
-    %p This parameter encompasses a big leap in complexity from single celled organisms to all the way to complex organisms capable of culture and tool use. These two things dramatically increase a species' ability to adapt. When <i>homo sapiens</i> discovered clothing, we could teach our children to make clothing and now we could adapt to any climate without waiting to evolve a fur coat or a cooling mechanism. Similarly, stone tools enabled us to adapt our diets without waiting for claws or grinding teeth.
-    %p In order for this rapid adaption to work a species must have the both the ability to make the tool and the ability to teach others -- especially the next generation. That is what makes technological growth possible.
-  %dt.bullet
-    = main_point 'Convergent Evolution is The Key'
-  %dd.detail
-    %p Convergent evolution is the idea that different species can independently evolve similar adaptations to similar survival problems. There are many examples of convergent evolution here on Earth. Many species of plants and animals use bright colors to advertize their toxicity, while many others evolved camouflage colors to hide. Similarly, fish in Arctic and Antarctic waters independently evolved antifreeze proteins for their blood.
-  %dt.bullet
-    = main_point 'Convergent Examples of Intelligence'
-  %dd.detail
-    %p Intelligence is clearly difficult to achieve. Life has been evolving for 3.8 billion years and we only achieved it in the last couple million years or so. Is intelligence useful enough for multiple species to converge to it? Primates have limited technology and culture -- but they are really part of our evolutionary path.
-    %p Dolphins also have culture. Pods in different areas have learned different hunting techniques. These techniques are passed down from generation to generation as learned behavior. Dolphins also use some limited technology. Near Australia, one group used sponges, ripped from the sea floor, to probe for fish. This technique is taught to children and becomes part of their culture. Is this the slow beginning of greater technologies?
-  %dt.bullet
-    = main_point 'More Information'
-  %dd.detail
-    %ul
-      %li= info_link 'Development of Technology', 'http://en.wikipedia.org/wiki/Technology'
-      %li= info_link 'Basic Stone Tools', 'http://weber.ucsd.edu/~dkjordan/arch/tools.html'
-      %li= info_link 'Convergent Evolution', 'http://www.pbs.org/wgbh/evolution/library/01/4/l_014_01.html'
-      %li= info_link 'Dolphin Culture', 'http://www.world-science.net/exclusives/080807_dolphin.htm'
-      %li= info_link 'Dolphin Tool Use', 'http://www.nytimes.com/2005/12/11/magazine/11ideas1-14.html'
+%div.bullets
+  .illustration
+    = image_tag 'stone_tools.jpg', :class => 'illustration', :title => 'Ancient Stone Tools'
+    Ancient Stone Tools.
+    %br
+    Image Courtesy National Park Service.
+  %dl
+    %dt.bullet
+      = main_point 'What do We Mean by Intelligence?'
+    %dd.detail
+      %p This parameter encompasses a big leap in complexity from single celled organisms to all the way to complex organisms capable of culture and tool use. These two things dramatically increase a species' ability to adapt. When <i>homo sapiens</i> discovered clothing, we could teach our children to make clothing and now we could adapt to any climate without waiting to evolve a fur coat or a cooling mechanism. Similarly, stone tools enabled us to adapt our diets without waiting for claws or grinding teeth.
+      %p In order for this rapid adaption to work a species must have the both the ability to make the tool and the ability to teach others -- especially the next generation. That is what makes technological growth possible.
+    %dt.bullet
+      = main_point 'Convergent Evolution is The Key'
+    %dd.detail
+      %p Convergent evolution is the idea that different species can independently evolve similar adaptations to similar survival problems. There are many examples of convergent evolution here on Earth. Many species of plants and animals use bright colors to advertize their toxicity, while many others evolved camouflage colors to hide. Similarly, fish in Arctic and Antarctic waters independently evolved antifreeze proteins for their blood.
+    %dt.bullet
+      = main_point 'Convergent Examples of Intelligence'
+    %dd.detail
+      %p Intelligence is clearly difficult to achieve. Life has been evolving for 3.8 billion years and we only achieved it in the last couple million years or so. Is intelligence useful enough for multiple species to converge to it? Primates have limited technology and culture -- but they are really part of our evolutionary path.
+      %p Dolphins also have culture. Pods in different areas have learned different hunting techniques. These techniques are passed down from generation to generation as learned behavior. Dolphins also use some limited technology. Near Australia, one group used sponges, ripped from the sea floor, to probe for fish. This technique is taught to children and becomes part of their culture. Is this the slow beginning of greater technologies?
+    %dt.bullet
+      = main_point 'More Information'
+    %dd.detail
+      %ul
+        %li= info_link 'Development of Technology', 'http://en.wikipedia.org/wiki/Technology'
+        %li= info_link 'Basic Stone Tools', 'http://weber.ucsd.edu/~dkjordan/arch/tools.html'
+        %li= info_link 'Convergent Evolution', 'http://www.pbs.org/wgbh/evolution/library/01/4/l_014_01.html'
+        %li= info_link 'Dolphin Culture', 'http://www.world-science.net/exclusives/080807_dolphin.htm'
+        %li= info_link 'Dolphin Tool Use', 'http://www.nytimes.com/2005/12/11/magazine/11ideas1-14.html'
