Added demographics to model and survey workflow

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -266,6 +266,21 @@ blockquote.signage
       background: #a2cb52 url(/images/gradient-green2.png) repeat-x
       border: 1px solid #5c992e
 
+      fieldset
+        li
+          :margin-bottom .5em
+        
+      label
+        :font-size 90%
+        :color #222
+        :text-shadow 0 1px 1px #9c9
+        :font-weight bold
+        :font-family Helvetica, 'Mank Sans', sans-serif
+      input[type=text], select
+        :font-size 100%
+        :border 2px solid #5c992e
+        :padding .25em
+
     input[type=submit]
       margin-top: 1em
       font-size: 90%
