--- a/app/views/surveys/_fc.html.haml
+++ b/app/views/surveys/_fc.html.haml
@@ -3,10 +3,8 @@
 
 %div.bullets
   .illustration
-    = image_tag 'radio_telescope.jpg', :class => 'illustration', :title => 'Three radio telescopes.'
-    Three radio telescopes.
-    %br
-    Image Courtesy NASA.
+    = image_tag 'radio_telescope.jpg', :title => 'Three radio telescopes.'
+    %span.caption Three radio telescopes. Courtesy NASA.
   %dl
     %dt.bullet
       = main_point 'Will Radio be Discovered?'
