--- a/app/views/surveys/_fi.html.haml
+++ b/app/views/surveys/_fi.html.haml
@@ -3,10 +3,9 @@
 
 %div.bullets
   .illustration
-    = image_tag 'stone_tools.jpg', :class => 'illustration', :title => 'Ancient Stone Tools'
-    Ancient Stone Tools.
-    %br
-    Image Courtesy National Park Service.
+    = image_tag 'stone_tools.jpg', :title => 'Ancient stone tools.'
+    %span.caption
+      Ancient stone tools. Courtesy National Park Service.
   %dl
     %dt.bullet
       = main_point 'What do We Mean by Intelligence?'
