--- a/app/views/surveys/_fl.html.haml
+++ b/app/views/surveys/_fl.html.haml
@@ -3,10 +3,9 @@
 
 %div.bullets
   .illustration
-    = image_tag 'extremeophiles.jpg', :class => 'illustration', :title => 'Thermophile bacteria color a hot spring.'
-    Thermophile bacteria color a hot spring.
-    %br
-    Image Courtesy National Park Service.
+    = image_tag 'extremeophiles.jpg', :title => 'Thermophile bacteria color a hot spring.'
+    %span.caption
+      Thermophile bacteria color a hot spring. Courtesy National Park Service.
   %dl
     %dt.bullet
       = main_point "Very Little Data to Examine"
