--- a/app/views/surveys/_fp.html.haml
+++ b/app/views/surveys/_fp.html.haml
@@ -2,12 +2,11 @@
 
 %h3 How many suitable stars actually form a solar system with planets in it?
 
-%div.bullets
+.bullets
   .illustration
-    = image_tag 'hot_jupiter.jpg', :class => 'illustration', :title => 'A hot Jupiter planet near its parent star.'
-    A hot Jupiter planet near its parent star.
-    %br
-    Courtesy David Aguilar (CfA) / TRACE / NASA.
+    = image_tag 'hot_jupiter.jpg', :title => 'A hot Jupiter planet near its parent star.', :width => 220, :height => 275
+    %span.caption
+      A hot Jupiter planet near its parent star. Courtesy David Aguilar (CfA) / TRACE / NASA.
   %dl
     %dt.bullet 
       = main_point "As of August 2009, we have found 357 planets around 300 different stars"
