--- a/app/views/surveys/_l.html.haml
+++ b/app/views/surveys/_l.html.haml
@@ -4,9 +4,8 @@
 %div.bullets
   .illustration
     = image_tag 'impact.jpg', :class => 'illustration', :title => "Artist's conception of an asteroid impact."
-    Artist's conception of an asteroid impact.
-    %br
-    Image Courtesy NASA.
+    %span.caption
+      Artist's conception of an asteroid impact. Image courtesy NASA.
   %dl
     %dt.bullet
       = main_point 'When do we start counting?'
