--- a/app/views/surveys/_ne.html.haml
+++ b/app/views/surveys/_ne.html.haml
@@ -3,10 +3,9 @@
 
 %div.bullets
   .illustration
-    = image_tag 'wet_mars.jpg', :class => 'illustration', :title => 'A hot Jupiter planet near its parent star.'
-    Mars at it might have looked 3.5 bilion years ago.
-    %br
-    Courtesy NASA/Greg Shirah.
+    = image_tag 'wet_mars.jpg', :title => 'Mars at it might have looked 3.5 billion years ago.'
+    %span.caption
+      Mars at it might have looked 3.5 billion years ago. Courtesy NASA/Greg Shirah.
   %dl
     %dt.bullet
       = main_point "Earthlike Means Liquid Water"
