--- a/app/views/surveys/_r_star.html.haml
+++ b/app/views/surveys/_r_star.html.haml
@@ -5,10 +5,9 @@
 
 %div.bullets
   .illustration
-    = image_tag 'orion_nebula.jpg', :class => 'illustration', :title => 'Star forming regions of the Orion Nebula.'
-    Star forming region of the Orion Nebula.
-    %br
-    HST Photo courtesy of NASA
+    = image_tag 'orion_nebula.jpg', :title => 'Star-forming region of the Orion Nebula.'
+    %span.caption
+      Star-forming region of the Orion Nebula. HST photo courtesy of NASA.
 
   %dl
     %dt.bullet
