--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,11 +7,16 @@
     = stylesheet_link_tag 'compiled/print.css', :media => 'print'
     /[if lt IE 8]
       = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
+    /[if IE 7]
+      = stylesheet_link_tag 'compiled/ie7.css', :media => 'screen, projection'
+    /[if gte IE 8]
+      = stylesheet_link_tag 'compiled/ie8.css', :media => 'screen, projection'
     = stylesheet_link_tag 'qfl/jquery-ui-1.7.2.custom.css'
     = stylesheet_link_tag 'ui.slider.extras'
     = javascript_include_tag 'jquery-1.3.2.min.js'
     = javascript_include_tag 'jquery-ui-1.7.1.custom.min.js'
     = javascript_include_tag 'selectToUISlider.jQuery.js'
+    = javascript_include_tag 'DD_roundies.uicornerfix.js'
     = javascript_include_tag 'application'
     = partial '/shared/disqus_variables'
     
