tweaks to illustration to avoid colliding with large parameter

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -397,6 +397,7 @@ dd.detail
   
 .illustration
   float: right
+  margin-top: 2.0em
   width: 220px
   
   .caption
@@ -405,7 +406,6 @@ dd.detail
     :display block
     :line-height 1.1
     :margin-top 3px
-    /margin-top: 1.5em
   
   img
     display: block
