--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -398,6 +398,7 @@ dd.detail
 .illustration
   float: right
   margin-top: 2.0em
+  margin-left: 1em
   width: 220px
   
   .caption
@@ -406,6 +407,7 @@ dd.detail
     :display block
     :line-height 1.1
     :margin-top 3px
+    :text-align right
   
   img
     display: block
